# qjo

./: .gitignore  Makefile  Pipfile  README.md  pyproject.toml  qjo.py  requirements.txt  salles.txt  test-spotify.py  test_qjo.py
qjo/: __init__.py  __main__.py  models.py
qjo/venues/: __init__.py  cabaret_sauvage.py  maro.py  trianon.py
tests/: save.py  test_qjo.py
tests/agendas/: cabaretsauvage.html  maroquinerie.html  trianon.html
